--- a/po/switch-my-slot.shouko.pot
+++ b/po/switch-my-slot.shouko.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: switch-my-slot.shouko\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-22 16:41+0000\n"
+"POT-Creation-Date: 2023-02-12 22:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -26,7 +26,7 @@ msgid "HAL Version: "
 msgstr ""
 
 #: ../qml/Main.qml:37
-msgid "App Version: v0.4"
+msgid "App Version: v0.5"
 msgstr ""
 
 #: ../qml/Main.qml:45
@@ -46,5 +46,5 @@ msgid "Current slot: "
 msgstr ""
 
 #: ../qml/Main.qml:86
-msgid "Developed by Shou"
+msgid "Developed by Shoko"
 msgstr ""
